clean4u/src/main/java/org/example/clean4u/_core/errors/exception/Exception500.java
package org.example.clean4u._core.errors.exception;

public class Exception500 extends RuntimeException {
    public Exception500 (String message) {
        super(message);
    }
}
